# rs-service-boilerplate

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs  main.rs  server.rs
src/turbo_http_service/: mod.rs  server.rs
