[package]
name = "service-boilerplate"
version = "0.1.0"
authors = ["Raynos <raynos2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: add slog
# TODO: add runtime
# TODO: add futures @ 0.3
# TODO: add json

[dependencies]
http = "0.1.17"
http-service = "0.2.0"
futures-preview = "0.3.0-alpha.17"
runtime = "0.3.0-alpha.6"
httparse = "1.3.4"
